# solfacil-python-package

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pyrightconfig.json  ruff.toml
.github/workflows/: ci.yaml
docs/broker/: README.md
docs/cache/: README.md
requirements/: development.txt
solfacil/: __init__.py
solfacil/cache/: __init__.py  adapter.py  cluster.py  constants.py  protocol.py  repository.py  settings.py
solfacil/common/: protocols.py
solkit/: __init__.py
solkit/broker/: __init__.py  abstracts.py  adapter.py  contants.py  repository.py  settings.py
solkit/cache/: adapter.py  protocol.py  settings.py
src/cache/: abstracts.py
tests/unit/cache/: test_settings.py
