[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "solkit"
version = "0.1.0"
requires-python = ">=3.11"
description = "Solfacil Python packages and tools"
authors = [
    {name = "Solfacil", email = "dev@solfacil.com.br"}
]
readme = {"file" = "README.md", "content-type" = "text/markdown"}
keywords = ["python", "package"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pydantic-settings>=2.10.1"
]

[tool.hatch.build.targets.sdist]
include = [
    "solkit"
]

[tool.hatch.build.targets.wheel]
include = [
    "solkit"
]

[project.urls]
Homepage = "https://github.com/solfacil/solkit"
Repository = "https://github.com/solfacil/solkit"
Documentation = "https://github.com/solfacil/solkit#readme"

[project.optional-dependencies]
cache = [
    "redis>=6.2.0"
] 
broker = [
    "aiokafka>=0.12.0"
]
all = [
    "solkit[cache,broker]"
]
